# rcraicer

./: .gitignore  .~lock.debug.csv#  .~lock.debug_new.ods#  .~lock.debug_old.ods#  CMakeLists.txt  git.txt  package.xml  se.viz  test.csv
arduino/: arduino.ino
config/: ekf copy.yaml  params.yaml
include/rcraicer/: arduino_controller.h  blocking_queue.h  external_tracker.h  imu_mavlink.h  mavlink_serial_port.h  serial_data_msg.h  serial_port.h  state_estimator.h  wheel_odometry.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
kivy/: main.py
launch/: gps_base_launch.py  odom2.txt  offboard_launch.py  onboard_launch.py  test_launch.py
log/: latest_build
other/: 99-rcraicer.rules  colcon.txt  dependencies.txt  docker.txt  focal.txt  results.txt  test_package.xml
qt/build-track_builder-Desktop_Qt_5_15_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  (+2 more)
qt/track_builder/: CMakeLists.txt  imagetools.cpp  imagetools.h  imageviewer.cpp  imageviewer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rtthread.cpp  rtthread.h  ximeacamera.cpp  ximeacamera.h
rcraicer/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rcraicer/arduino/: arduino.ino
rcraicer/config/: dual_ekf.yaml  ekf.yaml
rcraicer/include/rcraicer/: ar_arduino_controller.h  arduino_controller.h  diagnostics.h  joystick_control.h  runstop.h  serial_data_msg.h  serial_port.h  state_estimator.h  ubx_protocol.h
rcraicer/launch/: .~lock.odom.ods#  ar_imu.py  ar_onboard.py  ar_onboard_launch.py  ekf.yaml  ekf_launch.py  gps_launch.py  joy_launch.py  mapviz_launch.py  odom.txt  odom_launch.py  offboard_launch.py  onboard_launch.py  sim_launch.py  sim_launch_basic.py  system_status.py  tf_launch.py
rcraicer/other/: 99-rcraicer.rules  docker.txt  jetson setup.txt
rcraicer/scripts/: system_status.py
rcraicer/src/: ar_arduino_controller.cpp  arduino_controller.cpp  diagnostics.cpp  external_tracker.cpp  gps_node.cpp  joystick_control.cpp  mavlink_serial_port.cpp  runstop.cpp  serial_port.cpp  state_estimator.cpp  ubx_protocol.cpp  wheel_odometry.cpp
rcraicer_gps/: CMakeLists.txt
rcraicer_imu/: CMakeLists.txt  package.xml
rcraicer_mapping/: CMakeLists.txt
rcraicer_mapping/include/rcraicer_mapping/: map_generator.h  map_publisher.h
rcraicer_mapping/src/: map_generator.cpp  map_publisher.cpp
rcraicer_mppi/: CMakeLists.txt  package.xml
rcraicer_mppi/include/rcraicer_mppi/: StatusMonitor.h  car_bfs.cuh  car_kinematics.cuh  costs.cu  costs.cuh  debug_kernels.cuh  generalized_linear.cu  generalized_linear.cuh  managed.cuh  mppi.cu  mppi.cuh  mppi_controller.cu  mppi_controller.cuh  neural_net_model.cu  neural_net_model.cuh  param_getter.h  path_integral_node.cuh  rcraicer_plant.h  run_control_loop.cuh
rcraicer_mppi/src/: StatusMonitor.cpp  mppi_nodelet.cu  param_getter.cpp  path_integral_node.cu  rcraicer_plant.cpp  test.cu  todo.txt
rcraicer_mppi_test/: CMakeLists.txt  package.xml
rcraicer_mppi_test/include/rcraicer_mppi_test/: data_recorder.h  sim_data_recorder.h
rcraicer_mppi_test/models/: dynmodel1.pth  dynmodel10.pth  dynmodel11.pth  dynmodel12.pth  dynmodel13.pth  dynmodel14.pth  dynmodel15.pth  dynmodel16.pth  dynmodel17.pth  dynmodel18.pth  dynmodel19.pth  dynmodel2.pth  dynmodel20.pth  dynmodel21.pth  dynmodel22.pth  dynmodel23.pth  dynmodel24.pth  dynmodel3.pth  dynmodel4.pth  dynmodel5.pth  dynmodel6.pth  dynmodel7.pth  dynmodel8.pth  dynmodel9.pth  dynmodel_states1.pth  dynmodel_states10.pth  dynmodel_states11.pth  dynmodel_states12.pth  dynmodel_states13.pth  dynmodel_states14.pth  dynmodel_states15.pth  dynmodel_states16.pth  dynmodel_states17.pth  dynmodel_states18.pth  dynmodel_states19.pth  dynmodel_states2.pth  dynmodel_states20.pth  dynmodel_states21.pth  dynmodel_states22.pth  dynmodel_states23.pth  (+8 more)
rcraicer_mppi_test/rcraicer_mppi_test/: dyn_model.py  mppi_node.py
rcraicer_mppi_test/scripts/: data_viz.py  dyn.py  dyn_dataset.py  dyn_model.py  dyn_new.py  model_converter.py  model_deconverter.py  model_test.py  model_test_new.py  test.py  test2.py
rcraicer_mppi_test/src/: data_recorder.cpp  sim_data_recorder.cpp
rcraicer_mppi_test/training_data/: .~lock.dynamics_data.csv#  .~lock.dynamics_data_test.csv#  .~lock.dynamics_data_train.csv#  .~lock.dynamics_data_train_good_01012022.csv#  .~lock.gazebo_data.csv#  .~lock.gazebo_data_test.csv#  .~lock.gazebo_data_train.csv#  .~lock.gazebo_data_train_inc1.csv#  dynamics_data._oldcsv  dynamics_data.csv  dynamics_data_test.csv  dynamics_data_test_02012022.csv  dynamics_data_test_03012022.csv  dynamics_data_test_old.csv  dynamics_data_train.csv  dynamics_data_train1.csv  dynamics_data_train_03012022.csv  dynamics_data_train_good_01012022.csv  dynamics_data_train_ok.csv  gazebo_data.csv  gazebo_data_test.csv  gazebo_data_test2.csv  gazebo_data_test3.csv  gazebo_data_test4.csv  gazebo_data_test5.csv  gazebo_data_test6.csv  gazebo_data_test7.csv  gazebo_data_test_07012022.csv  gazebo_data_test_withoutaccel.csv  gazebo_data_train1.csv  gazebo_data_train2.csv  gazebo_data_train4.csv  gazebo_data_train5.csv  gazebo_data_train6.csv  gazebo_data_train7.csv  gazebo_data_train8.csv  gazebo_data_train_07012022.csv  gazebo_data_train_prior.csv  gazebo_data_train_withoutaccel.csv
rcraicer_msgs/: CMakeLists.txt
rcraicer_sim/: CMakeLists.txt  package.xml
rcraicer_sim/include/rcraicer_sim/: airsim_node.h  sim_debug_node.h  sim_node.h  tcp_server.h
rcraicer_sim/src/: airsim_node.cpp  sim_debug_node.cpp  sim_node.cpp  tcp_server.cpp
rcraicer_ui/: setup.cfg  setup.py
rcraicer_utils/: package.xml  setup.cfg  setup.py
scratch/: blur.py  calibrate.py  charuco.py  charuco_calibrate.py  charuco_capture.py  circle_capture.py  cone.py  depth.py  depth_tracker.py  euler_from_quat.py  gltest.py  stereo_cam.py  tracker.py  ximea_cam.py
src/: arduino_controller.cpp  imu_mavlink.cpp  serial_port  serial_port.cpp  state_estimator.cpp  wheel_odometry.cpp
tk/: bounding_box.py  cam_thread.py  imagetools.py  main.py  pose_estimator.py  stereo.py  test.py  test2.py  track.py  track_widget.py
(+505 files in other folders)
